testsuite/tests/typecheck/should_fail/OrdErr.stderr

OrdErr.hs:12:14: error: [GHC-64725]
    • Cannot satisfy: a <= a + 1
    • In the expression: proxyInEq
      In an equation for ‘proxyInEq1’: proxyInEq1 = proxyInEq

OrdErr.hs:16:14: error: [GHC-64725]
    • Cannot satisfy: 5 <= 3
    • In the expression: proxyInEq
      In an equation for ‘proxyInEq2’: proxyInEq2 = proxyInEq
